--- a/src/app/tables/tables.component.html
+++ b/src/app/tables/tables.component.html
@@ -4,6 +4,6 @@
 <option *ngFor="let table of tableOptions" [value]="table">{{table}}</option>
 </select>
 </div>
-
+<input type="checkbox">
   <h1>{{selectedTable}}</h1>
-<ng2-smart-table [settings]="settings" [source]="data"></ng2-smart-table>
+<ng2-smart-table [settings]="settings" [source]="data" (editConfirm)="onEditConfirm($event)"></ng2-smart-table>
