added dropdwon filter for ack and active, also added view image tage but it is not functioning yet

--- a/src/app/tables/tables.component.html
+++ b/src/app/tables/tables.component.html
@@ -4,6 +4,7 @@
 <option *ngFor="let table of tableOptions" [value]="table">{{table}}</option>
 </select>
 </div>
-<input type="checkbox">
+<!-- <a (click)="f()" onmouseover="" style="cursor: pointer;">View image</a>
+<input type="checkbox"> -->
   <h1>{{selectedTable}}</h1>
 <ng2-smart-table [settings]="settings" [source]="data" (editConfirm)="onEditConfirm($event)"></ng2-smart-table>
