Images now display in table

--- a/src/app/tables/imagebutton.render.component.html
+++ b/src/app/tables/imagebutton.render.component.html
@@ -4,5 +4,5 @@
    <button (click)="returnToButton()">Return</button>
  </div>
  <div *ngIf="showImg">
-   <img id="camera-image" />
+   <img [src] = "reportImage" />
  </div>
