fixed UI for displaying images and null images

--- a/src/app/tables/imagebutton.render.component.html
+++ b/src/app/tables/imagebutton.render.component.html
@@ -1,8 +1,9 @@
- <button *ngIf="!showImg"  (click)="showImage()">View Image</button>
+ <button *ngIf="!showImg && !nullImg"  (click)="showImage()">View Image</button>
  <div *ngIf="nullImg" >
    <p>No Image avaliable<p>
    <button (click)="returnToButton()">Return</button>
  </div>
  <div *ngIf="showImg">
    <img [src] = "reportImage" />
+   <button (click)="returnToButton()">Return</button>
  </div>
