standard image sizes

--- a/src/app/tables/imagebutton.render.component.html
+++ b/src/app/tables/imagebutton.render.component.html
@@ -4,6 +4,6 @@
    <button (click)="returnToButton()">Return</button>
  </div>
  <div *ngIf="showImg">
-   <img [src] = "reportImage" />
+   <img [src] = "reportImage" style="width:200px;height:200px;" />
    <button (click)="returnToButton()">Return</button>
  </div>
